--- a/Frontpage.html
+++ b/Frontpage.html
@@ -18,6 +18,7 @@
           short distance from some of London’s must-see places. Bring your energy and join us on this Virtual tour in
           one of the most vibrant cities in the world. Tour reality with Virtuality!
         </p>
+<img class="screenshot" src="screenshot1.png" />
         <div class="link">
 <a href="home.html"> <div class="overlap-group"><div class="text-wrapper-2">Home Screen</div><div class="image"><div class="arrow-top-right"></div></div></a>
           </div>
